2008-06-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/z80/aslist.c (lstsym): changed old K&R to ANSI
	* src/SDCCicode.c (geniCodeCritical): fixed bug for hc08
	* src/z80/gen.c (genCritical, genEndCritical): fixed bug 2077267
	* support/regression/tests/bug2077267.c: new, added

2008-09-05 Raphael Neider <rneider AT web.de>

	* configure.in, Makefile.common.in: add support for ccache,
	  remove spurious $VERSION output, detect doc-tools even without
	  --enable-doc to facilitate later manual doc-builds, minor cleanup
	* configure: regenerated

	* doc/Makefile.in: quieten pdflatex, makeindex, and latex2html,
	  avoid races in parallel VPATH builds
	* doc/clean.mk: remove .lyx files in the builddir for VPATH builds
	* doc/sdccman.lyx: mention --without-ccache configure option

2008-09-01 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_derefPtr): handle CPOINTERs as well
	* (genConstPointerGet): fix reading bitfields from __code space
	* src/pic16/glue.c (pic16_printIvalBitFields): correctly mask
	  bitfield initializers (fix regression test bug1856409.c)
	* (pic16_printIvalCharPtr,pic16_printIvalPtr): generalized to support
	  arbitrary sizes

2008-08-31 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genAssign): removed useless compiler output
	* (genPointerGet,genPointerSet,genCast),
	  src/pic16/glue.c (pic16_printGPointerType):
	  also handle PPOINTERs just to avoid spurious asserts
	* (pic16_printIvalType,pic16_printIvalBitFields):
	  generalized to arbitrary type/bitfield sizes, allows compilation of
	  regression test bug-1981238.c
	* (pic16_printIvalChar): fix regression test structflexarray.c
	* (pic16_printIvalArray): avoid SIGSEGV on uninitialized strings
	  in initialized structs and fix #1843745
	* (pic16_printIvalStruct): always output initializers for all fields,
	  even those not explicitly given, fixes zeropad.c regression test
	* (pic16_printIvalUnion): fix union initializers (bug1426356.c,